--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CC = g++
 EXE_NAME = open-tgm
 SOURCE_FILES= $(wildcard common/*.cpp) $(wildcard targets/sfml/*.cpp) $(wildcard modes/*.cpp)
 EXE_OBJ_FILES = $(SOURCE_FILES:.cpp=.o)
-CCFLAGS = -DTARGET_SFML -Wall -pedantic
+CCFLAGS = -DTARGET_SFML -Wall -Wextra -pedantic
 LDFLAGS = 
 INCLUDE_DIR = -I./include -I./targets/sfml 
 LIBS_DIR =  
