--- a/src/Makefile.mxe
+++ b/src/Makefile.mxe
@@ -1,11 +1,11 @@
 MXE = ~/mxe
 CC = $(MXE)/usr/bin/i686-w64-mingw32.static-g++
 EXE_NAME = open-tgm.exe
-SOURCE_FILES= $(wildcard *.cpp) $(wildcard sfml/*.cpp)
+SOURCE_FILES = $(wildcard common/*.cpp) $(wildcard targets/sfml/*.cpp) $(wildcard modes/*.cpp)
 EXE_OBJ_FILES = $(SOURCE_FILES:.cpp=.o)
 CCFLAGS = -DTARGET_SFML -Wall -pedantic `$(MXE)/usr/bin/i686-w64-mingw32.static-pkg-config --cflags sfml`
 LDFLAGS = 
-INCLUDE_DIR = 
+INCLUDE_DIR = -I./include -I./targets/sfml 
 LIBS_DIR = 
 LIBS = `$(MXE)/usr/bin/i686-w64-mingw32.static-pkg-config --libs sfml`
 BUILD_DIR = ../build/win32
