Rename some classes, using the namespace Core:: now for the core game rather than the Base prefix

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,22 +1,22 @@
 CC = g++
 EXE_NAME = open-tgm
-SOURCE_FILES= $(wildcard common/*.cpp) $(wildcard targets/sfml/*.cpp) $(wildcard modes/*.cpp)
+SOURCE_FILES= $(wildcard core/*.cpp) $(wildcard targets/sfml/*.cpp) $(wildcard modes/*.cpp)
 EXE_OBJ_FILES = $(SOURCE_FILES:.cpp=.o)
 CCFLAGS = -DTARGET_SFML -Wall -Wextra -pedantic
-LDFLAGS = 
-INCLUDE_DIR = -I./include -I./targets/sfml 
-LIBS_DIR =  
-LIBS = -lsfml-graphics -lsfml-window -lsfml-system 
+LDFLAGS =
+INCLUDE_DIR = -I./include -I./targets/sfml
+LIBS_DIR =
+LIBS = -lsfml-graphics -lsfml-window -lsfml-system
 BUILD_DIR = .
-EXTRAS = 
+EXTRAS =
 
 ifeq ($(OS),Windows_NT)
     BUILD_DIR = ../build/win32
     EXE_NAME = open-tgm.exe
     CCFLAGS += -DSFML_STATIC
-    INCLUDE_DIR += -I../extlibs/SFML-win32/include 
+    INCLUDE_DIR += -I../extlibs/SFML-win32/include
     LIBS = -lsfml-graphics-s -lsfml-window-s -lopengl32 -ljpeg -lfreetype -lgdi32 -lsfml-system-s -lwinmm -static-libgcc -static-libstdc++
-    LIBS_DIR = -L../extlibs/SFML-win32/lib 
+    LIBS_DIR = -L../extlibs/SFML-win32/lib
 else
     UNAME_S := $(shell uname -s)
     UNAME_M := $(shell uname -m)
@@ -29,22 +29,22 @@ else
           UNAME_M=i386
         else
         endif
-        EXE_NAME = open-tgm.bin 
+        EXE_NAME = open-tgm.bin
         CC = g++-4.8
         BUILD_DIR = ../build/linux_$(UNAME_M)
         CCFLAGS += -g -std=c++11
-        LDFLAGS = -Wl,-R./lib 
-        INCLUDE_DIR += -I../extlibs/SFML-linux_$(UNAME_M)/include 
-        LIBS = -lsfml-graphics -lsfml-window -lsfml-system -static-libgcc -static-libstdc++ 
-        LIBS_DIR = -L../extlibs/SFML-linux_$(UNAME_M)/lib 
+        LDFLAGS = -Wl,-R./lib
+        INCLUDE_DIR += -I../extlibs/SFML-linux_$(UNAME_M)/include
+        LIBS = -lsfml-graphics -lsfml-window -lsfml-system -static-libgcc -static-libstdc++
+        LIBS_DIR = -L../extlibs/SFML-linux_$(UNAME_M)/lib
         EXTRAS = rm -rf $(BUILD_DIR)/lib ; cp -r ../extlibs/SFML-linux_$(UNAME_M)/lib $(BUILD_DIR) ; rm -f $(BUILD_DIR)/open-tgm ; cp ../data/scripts/open-tgm $(BUILD_DIR)
     endif
     ifeq ($(UNAME_S),Darwin)
         BUILD_DIR = ../build/osx
-        CCFLAGS += 
-        INCLUDE_DIR += -I../extlibs/SFML-osx/include 
-        LIBS = 
-        LIBS_DIR = -L../extlibs/SFML-osx/lib 
+        CCFLAGS +=
+        INCLUDE_DIR += -I../extlibs/SFML-osx/include
+        LIBS =
+        LIBS_DIR = -L../extlibs/SFML-osx/lib
     endif
 endif
 
@@ -54,7 +54,7 @@ clean :
 	rm -f $(BUILD_DIR)/$(EXE_NAME) $(EXE_OBJ_FILES);
 	rm -rf $(BUILD_DIR)/resources
 
-$(EXE_NAME) : $(EXE_OBJ_FILES) 
+$(EXE_NAME) : $(EXE_OBJ_FILES)
 	mkdir -p $(BUILD_DIR)
 	rm -rf $(BUILD_DIR)/resources
 	cp -r ../data/resources $(BUILD_DIR)
