Fix mxe Makefile

--- a/src/Makefile_mxe
+++ b/src/Makefile_mxe
@@ -18,6 +18,7 @@ clean :
 	rm -rf $(BUILD_DIR)/resources
 
 $(EXE_NAME) : $(EXE_OBJ_FILES)
+	mkdir -p $(BUILD_DIR)
 	rm -rf $(BUILD_DIR)/resources
 	cp -r ../data/resources $(BUILD_DIR)
 	$(CC) $(LDFLAGS) -o $(BUILD_DIR)/$(EXE_NAME) $(EXE_OBJ_FILES) $(LIBS_DIR) $(LIBS)
