--- a/src/Makefile_mxe
+++ b/src/Makefile_mxe
@@ -3,7 +3,7 @@ CC = $(MXE)/usr/bin/i686-w64-mingw32.static-g++
 EXE_NAME = open-tgm.exe
 SOURCE_FILES = $(wildcard core/*.cpp) $(wildcard targets/sfml/*.cpp) $(wildcard modes/*.cpp)
 EXE_OBJ_FILES = $(SOURCE_FILES:.cpp=.o)
-CCFLAGS = -DTARGET_SFML -Wall -pedantic `$(MXE)/usr/bin/i686-w64-mingw32.static-pkg-config --cflags sfml`
+CCFLAGS = -DTARGET_SFML -DDEBUG -Wall -pedantic `$(MXE)/usr/bin/i686-w64-mingw32.static-pkg-config --cflags sfml`
 LDFLAGS =
 INCLUDE_DIR = -I./include -I./targets/sfml
 LIBS_DIR =
