--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extlibs/gLib2D"]
 	path = extlibs/gLib2D
 	url = https://github.com/libcg/gLib2D.git
+[submodule "extlibs/citro3d"]
+	path = extlibs/citro3d
+	url = https://github.com/fincs/citro3d.git
