Minimal code for 3DS target

--- a/src/Makefile_3ds
+++ b/src/Makefile_3ds
@@ -37,7 +37,7 @@ CFLAGS := -g -DTARGET_3DS -Wall -pedantic -O2 -mword-relocations\
 
 CFLAGS += $(INCLUDE) -DARM11 -D_3DS
 
-CXXFLAGS := $(CFLAGS) -fno-rtti -fno-exceptions
+CXXFLAGS := $(CFLAGS) -fno-rtti -fno-exceptions -std=gnu++11
 
 ASFLAGS	:= -g $(ARCH)
 LDFLAGS	= -specs=3dsx.specs -g $(ARCH) -Wl,-Map,$(notdir $*.map)
