Fix PSP target build

--- a/src/Makefile_psp
+++ b/src/Makefile_psp
@@ -4,7 +4,7 @@ SOURCE_FILES_C= $(wildcard targets/psp/resources/*.c)
 OBJS = $(SOURCE_FILES_C:.c=.o) $(SOURCE_FILES_CPP:.cpp=.o)
 
 INCDIR = ./include ./targets/psp ../extlibs/gLib2D
-CFLAGS = -O2 -G0 -Wall -DTARGET_PSP -DDEBUG
+CFLAGS = -O2 -G0 -Wall -DTARGET_PSP
 CXXFLAGS = $(CFLAGS) -fno-exceptions -fno-rtti
 ASFLAGS = $(CFLAGS)
 
