Start implementing GPU scalable resource system

--- a/data/resources/8px/tilemap.ini
+++ b/data/resources/8px/tilemap.ini
@@ -1,7 +1,7 @@
-# tilemap.ini - 8px
+# outline.ini - 8px
 
 width = 32
-height = 64
+height = 32
 type = tilemap
-tile_nb = 32
+tile_nb = 16
 tile_size = 8
