Improve ninja based build system

--- a/src/platforms/3ds/build.ini
+++ b/src/platforms/3ds/build.ini
@@ -1,4 +1,31 @@
 # 3DS
 
-type = gpu
+requires = 3ds
+
+as = arm-none-eabi-as
+cc = arm-none-eabi-gcc
+cxx = arm-none-eabi-g++
+
+common_flags = -mword-relocations -fomit-frame-pointer -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -DARM11 -D_3DS
+cxxflags = -fno-rtti -fno-exceptions
+ldflags = -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft
+# TODO ldflags += -Wl,-Map,$(BUILD_DIR)/$(NAME).map
+
 src_cpp = *.cpp
+
+devkitpro_headers = libctru/include
+devkitpro_libs_dir = libctru/lib
+
+libs = ctru m
+
+gpu_backend = citro3d
+gpu_tile_sizes = 9px
+gpu_assets = builtin
+
+# TODO
+png_files = ../../../data/platform_specific/3ds/*.png
+
+app_title = Open TGM
+app_description = Built with devkitARM & libctru
+app_author = Nehalem501
+app_icon = data/platform_specific/3ds/icon.png
