--- a/src/gpu/backends/citro3d/build.ini
+++ b/src/gpu/backends/citro3d/build.ini
@@ -6,5 +6,6 @@ src_cpp = *.cpp
 src_shader = shaders/*.v.pica
 
 libs = citro3d
+static_libs = zstd
 
 texture_formats = rgba8 rgb8 rgba5551 rgb565 rgba4 la8 l8 a8 la4 l4 a4 etc1 etc1a4
