Build GBA target using new build system

--- a/src/platforms/gba/build.ini
+++ b/src/platforms/gba/build.ini
@@ -1,4 +1,22 @@
 # GBA
 
+requires = gba
+
+binary = open-tgm.elf
+
+as = arm-none-eabi-as
+cc = arm-none-eabi-gcc
+cxx = arm-none-eabi-g++
+
+common_flags = -mcpu=arm7tdmi -mtune=arm7tdmi -fomit-frame-pointer -ffast-math -mthumb -mthumb-interwork
+cxxflags = -fno-rtti -fno-exceptions
+ldflags = -mthumb -mthumb-interwork -specs=gba.specs
+# TODO ldflags += -Wl,-Map,$(BUILD_DIR)/$(NAME).map
+
 src_c = resources/*.c
 src_cpp = *.cpp
+
+devkitpro_headers = libgba/include
+devkitpro_libs_dir = libgba/lib
+
+libs = mm gba
