New build system works with internal textures

--- a/src/platforms/sdl/build.ini
+++ b/src/platforms/sdl/build.ini
@@ -1,6 +1,11 @@
 # SDL
 
-src_cpp = *.cpp
+requires = sdl
+
+common_flags = -DRESIZABLE
+
+src_cpp = *.cpp ../../utils/timing.cpp
 
 gpu_backend = opengl
-gpu_tile_sizes = 8px 9px # TODO
+gpu_tile_sizes = 8px #9px # TODO
+gpu_assets = builtin
