--- a/src/tools/img2tx/build.ini
+++ b/src/tools/img2tx/build.ini
@@ -1,12 +1,12 @@
 # IMG2TX Makefile
 
-# Binary filename
-name = img2tx
+# Library filename
+library = img2tx
 
 src_cpp = img2tx.cpp
 
 # Flags
-common_flags = -Wall -Wextra -pedantic-errors -Werror
+common_flags = -Wall -Wextra -pedantic-errors
 cxx_std = c++11
 
 # Libraries
