PSP GPU target working

--- a/src/platforms/psp/build.ini
+++ b/src/platforms/psp/build.ini
@@ -1,4 +1,28 @@
 # PSP
 
-type = gpu
+requires = psp
+
+binary = open-tgm.elf
+
+cc = psp-gcc
+cxx = psp-g++
+link = psp-gcc
+
+common_flags = -G0 -D_PSP_FW_VERSION=150
+cxxflags = -fno-rtti -fno-exceptions
+
 src_cpp = *.cpp
+
+libs = stdc++ pspgum pspgu psprtc m pspvram pspdebug pspdisplay pspge pspctrl pspsdk c pspnet pspnet_inet pspnet_apctl pspnet_resolver psputility pspuser pspkernel
+
+gpu_backend = scegu
+gpu_tile_sizes = 10px
+gpu_assets = builtin
+
+psp_eboot_title = Open TGM
+psp_eboot_icon = NULL
+psp_eboot_icon1 = NULL
+psp_eboot_unkpng = NULL
+psp_eboot_pic1 = NULL
+psp_eboot_snd0 = NULL
+psp_eboot_psar = NULL
