Continue implementing SDL2 target

--- a/src/platforms/sdl2/build.ini
+++ b/src/platforms/sdl2/build.ini
@@ -1,4 +1,12 @@
 # SDL2
 
-type = gpu
-src_cpp = *.cpp
+requires = sdl2
+
+common_flags = -DRESIZABLE
+
+src_cpp = *.cpp ../../utils/timing.cpp
+
+# TODO opengl3 backend
+gpu_backend = opengl
+gpu_tile_sizes = 8px # TODO
+gpu_assets = builtin
