First implementation of dynamic asset resizing

--- a/src/platforms/sdl2/build.ini
+++ b/src/platforms/sdl2/build.ini
@@ -8,5 +8,5 @@ src_cpp = *.cpp ../../utils/timing.cpp
 
 # TODO opengl3 backend
 gpu_backend = opengl
-gpu_tile_sizes = 8px # TODO
+gpu_tile_sizes = 8px 9px #TODO
 gpu_assets = builtin
