--- a/src/platforms/3ds/build.ini
+++ b/src/platforms/3ds/build.ini
@@ -8,15 +8,17 @@ as = arm-none-eabi-as
 cc = arm-none-eabi-gcc
 cxx = arm-none-eabi-g++
 
-common_flags = -mword-relocations -fomit-frame-pointer -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -DARM11 -D_3DS
+cxx_std = gnu++20
+
+common_flags = -mword-relocations -fomit-frame-pointer -ffunction-sections -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft -D__3DS__
 cxxflags = -fno-rtti -fno-exceptions
 ldflags = -specs=3dsx.specs -march=armv6k -mtune=mpcore -mfloat-abi=hard -mtp=soft
 # TODO ldflags += -Wl,-Map,$(BUILD_DIR)/$(NAME).map
 
 src_cpp = *.cpp
 
-devkitpro_headers = libctru/include
-devkitpro_libs_dir = libctru/lib
+#devkitpro_headers = libctru/include
+#devkitpro_libs_dir = libctru/lib
 
 libs = ctru m
 
